# Badminton-Ball-Collection-Robot-Car

./: .gitignore  README.md  README_CN.md  README_cn.md  readme_cn.md
ros2/: DIRECTORY_TREE.txt  PACKAGE_OVERVIEW.md  PROTOCOL.md  README.md  build.sh  start_nav.sh  start_slam.sh  start_task.sh  stop_all.sh
ros2/src/arm_controller/: package.xml  setup.py
ros2/src/chassis_driver/: package.xml  setup.py
ros2/src/ldlidar_driver/: package.xml  setup.cfg  setup.py
ros2/src/orbbec_camera/: package.xml  setup.cfg  setup.py
ros2/src/rdkx5_inference/: package.xml  setup.cfg  setup.py
ros2/src/robot_bringup/: CMakeLists.txt  package.xml
ros2/src/robot_bringup/config/: amcl_params.yaml  controller.yaml  moveit_params.yaml  nav2_params.yaml  slam_params.yaml
ros2/src/robot_bringup/config/nav/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
ros2/src/robot_bringup/launch/: bringup.launch.py  nav2.launch.py  slam.launch.py
ros2/src/robot_bringup/maps/: warehouse.yaml
ros2/src/robot_bringup/rviz/: nav.rviz  robot.rviz
ros2/src/robot_description/: CMakeLists.txt  package.xml
ros2/src/robot_interfaces/: CMakeLists.txt  package.xml
ros2/src/robot_interfaces/action/: Grasp.action  Navigate.action  Patrol.action
ros2/src/robot_interfaces/msg/: ArmState.msg  DetectionResult.msg  RobotState.msg  TaskCommand.msg  TrackingStatus.msg
ros2/src/robot_interfaces/srv/: ControlGripper.srv  NavigateTo.srv  SetArmPose.srv  TriggerDetection.srv
ros2/src/task_manager/: package.xml  setup.py
ros2/src/teleop/: package.xml  setup.py
ros2/src/vision_bridge/: package.xml  setup.py
stm32/: project2.ioc
stm32/Core/Inc/: battery.h  bode_collector.h  control_source.h  encoder.h  i2c.h  icm20948.h  imu.h  kinematics.h  led.h  main.h  mecanum.h  motor.h  oled.h  oledfont.h  pid.h  protocol.h  ros_protocol.h  servo.h  tim.h  usart.h
stm32/MDK-ARM/: project2.uvguix.22956  project2.uvguix.dts32  project2.uvoptx  project2.uvprojx
(+53 files in other folders)
